--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="card" data-state="#about">
         <div class="card-header">
             <div class="card-cover"
-                style="background-image: url('https://images.unsplash.com/photo-1549068106-b024baf5062d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80')">
+                style="background-image: url('./img/background-img.jpg')">
             </div>
             <img class="card-avatar mt-5" src="img/profile.jpg" alt="avatar" />
             <h1 class="card-fullname">Serkan Kaya</h1>
