--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
 </head>
 
 <body>
 
     <div class="card" data-state="#about">
         <div class="card-header">
-            <div class="card-cover"
-                style="background-image: url('./img/background-img.jpg')">
+            <div class="card-cover" style="background-image: url('./img/background-img.jpg')">
             </div>
             <img class="card-avatar mt-5" src="img/profile.jpg" alt="avatar" />
             <h1 class="card-fullname">Serkan Kaya</h1>
@@ -41,7 +39,8 @@
                 </div>
                 <div class="card-social d-flex justify-content-center mt-4">
                     <div class="social-buttons">
-                        <a href="https://www.linkedin.com/in/serkannkaya/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/serkannkaya/" target="_blank"><i
+                                class="fab fa-linkedin-in"></i></a>
                         <a href="https://github.com/serkankayaa" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://twitter.com/Serkankkaya1" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://medium.com/@serkankayaa" target="_blank"><i class="fab fa-medium"></i></a>
@@ -52,21 +51,13 @@
                 <div class="card-content">
                     <div class="card-subtitle">WORK EXPERIENCE</div>
                     <div class="card-timeline">
-                        <div class="card-item" data-year="2014">
-                            <div class="card-item-title">Front-end Developer at <span>JotForm</span></div>
-                            <div class="card-item-desc">Disrupt stumptown retro everyday carry unicorn.</div>
-                        </div>
-                        <div class="card-item" data-year="2016">
-                            <div class="card-item-title">UI Developer at <span>GitHub</span></div>
-                            <div class="card-item-desc">Developed new conversion funnels and disrupt.</div>
-                        </div>
                         <div class="card-item" data-year="2018">
-                            <div class="card-item-title">Illustrator at <span>Google</span></div>
-                            <div class="card-item-desc">Onboarding illustrations for App.</div>
+                            <div class="card-item-title">Software Developer at <span>Exedra</span></div>
+                            <!-- <div class="card-item-desc">Disrupt stumptown retro everyday carry unicorn.</div> -->
                         </div>
                         <div class="card-item" data-year="2020">
-                            <div class="card-item-title">Full-Stack Developer at <span>CodePen</span></div>
-                            <div class="card-item-desc">Responsible for the encomposing brand expreience.</div>
+                            <div class="card-item-title">Software Developer at <span>SYS</span></div>
+                            <!-- <div class="card-item-desc">Developed new conversion funnels and disrupt.</div> -->
                         </div>
                     </div>
                 </div>
@@ -80,33 +71,26 @@
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
                                 <circle cx="12" cy="10" r="3" /></svg>
-                            Algonquin Rd, Three Oaks Vintage, MI, 49128
+                            Istanbul, Yıldız Teknik Üniversitesi Teknopark
                         </div>
-                        <div class="card-contact">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="none"
-                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path
-                                    d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" />
-                            </svg>(269) 756-9809</div>
                         <div class="card-contact">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                                 <path d="M22 6l-10 7L2 6" /></svg>
-                            william@rocheald.com
+                            srknnkaya@gmail.com
                         </div>
-                        <button class="contact-me">WORK TOGETHER</button>
                     </div>
                 </div>
             </div>
-            <div class="card-buttons">
-                <button data-section="#about" class="is-active">ABOUT</button>
-                <button data-section="#experience">EXPERIENCE</button>
-                <button data-section="#contact">CONTACT</button>
+                <div class="card-buttons">
+                    <button data-section="#about" class="is-active">ABOUT</button>
+                    <button data-section="#experience">EXPERIENCE</button>
+                    <button data-section="#contact">CONTACT</button>
+                </div>
             </div>
-        </div>
     </div>
 
 </body>
-
+<script src="./js/main.js" type="text/javascript"></script>
 </html>
