--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧙‍♂️</text></svg>">
     <title>Serkan Kaya</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
@@ -53,11 +54,9 @@
                     <div class="card-timeline">
                         <div class="card-item" data-year="2018">
                             <div class="card-item-title">Software Developer at <span>Exedra</span></div>
-                            <!-- <div class="card-item-desc">Disrupt stumptown retro everyday carry unicorn.</div> -->
                         </div>
                         <div class="card-item" data-year="2020">
                             <div class="card-item-title">Software Developer at <span>SYS</span></div>
-                            <!-- <div class="card-item-desc">Developed new conversion funnels and disrupt.</div> -->
                         </div>
                     </div>
                 </div>
