--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 </head>
 
 <body>
+    <div class="background-image"></div>
 
-    <div class="card" data-state="#about">
+    <div class="card mt-5" data-state="#about">
         <div class="card-header">
-            <div class="card-cover" style="background-image: url('./img/background-img.jpg')">
+            <div class="card-cover" style="background-color: darkseagreen">
             </div>
             <img class="card-avatar mt-5" src="img/profile.jpg" alt="avatar" />
             <h1 class="card-fullname">Serkan Kaya</h1>
