Changed work experience

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧙‍♂️</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧙‍♂️</text></svg>">
     <title>Serkan Kaya</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
@@ -59,6 +60,9 @@
                         <div class="card-item" data-year="2020">
                             <div class="card-item-title">Software Developer at <span>SYS</span></div>
                         </div>
+                        <div class="card-item" data-year="2021">
+                            <div class="card-item-title">Full Stack Developer at <span>BIS</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -69,28 +73,23 @@
                         <div class="card-contact">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
-                                <circle cx="12" cy="10" r="3" /></svg>
-                            Istanbul, Yıldız Teknik Üniversitesi Teknopark
-                        </div>
-                        <div class="card-contact">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
-                                <path d="M22 6l-10 7L2 6" /></svg>
+                                <path d="M22 6l-10 7L2 6" />
+                            </svg>
                             srknnkaya@gmail.com
                         </div>
                     </div>
                 </div>
             </div>
-                <div class="card-buttons">
-                    <button data-section="#about" class="is-active">ABOUT</button>
-                    <button data-section="#experience">EXPERIENCE</button>
-                    <button data-section="#contact">CONTACT</button>
-                </div>
+            <div class="card-buttons">
+                <button data-section="#about" class="is-active">ABOUT</button>
+                <button data-section="#experience">EXPERIENCE</button>
+                <button data-section="#contact">CONTACT</button>
             </div>
+        </div>
     </div>
 
 </body>
 <script src="./js/main.js" type="text/javascript"></script>
+
 </html>
